src/css/hnc_team.scss
#hncTeamContainer {
  .scrollIcon {
    color: rgb(195, 255, 215);
    font-family: "Montserrat", sans-serif;
    font-weight: 700;
    letter-spacing: 4px;
    cursor: pointer;

    #icon {
      cursor: pointer;
    }
  }
  /*  position: relative; */
  color: rgb(195, 196, 255);
  h1 {
    font-family: "Montserrat", sans-serif;
    font-weight: 700;

    /* text-decoration: underline; */
    /*   text-decoration-color: rgba(160, 70, 180, 0.8); */
    /* text-decoration-thickness: 5px; */
    padding: 3px;
    color: rgb(195, 196, 255);
  }

  /*  mask-image: linear-gradient(180deg, transparent 10%, black, transparent 100%);

  -webkit-mask-image: -webkit-linear-gradient(
    180deg,
    transparent -10%,
    #000,
    transparent 110%
  ); */
}

#hncTeamCardContainer {
  img {
    /*  position: absolute;
      top: -50%; */
    border-radius: 20px;
    padding: 5px;
    width: auto;
    height: 200px;
    /* background-position: center center;
      background-repeat: no-repeat; */
    object-fit: cover;
  }
  .card-title {
    font-family: "Montserrat", serif;
    font-weight: 800;
    letter-spacing: 2px;
    margin-top: 5px;
    margin-bottom: 5px;
    overflow-y: hidden;
  }
  .card {
    background: linear-gradient(
      135deg,
      rgba(107, 107, 107, 0.3) 0%,
      rgba(0, 0, 0, 0.2) 0%
    );
    margin: 5px;
    height: 375px;
    width: 200px;
    /* background: rgba(255, 255, 255, 0.25); */
    // box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
    /* backdrop-filter: blur(4px);
    -webkit-backdrop-filter: blur(4px); */
    border-radius: 20px;
    border: 2px solid rgba(255, 255, 255, 0.2);
    /* position: relative; */
    /*     overflow-y: visible; */
    overflow: hidden;
    transition: 500ms ease-in-out;
    /*   color: #ffffff; */
  }

  .card-body {
    padding: 15px;
    font-family: "Montserrat";
    font-size: 1.2em;
  }
  .card-text {
    color: rgb(195, 255, 215);
  }
  .btn {
    border-radius: 2.5rem;
    font-size: 12px;
    text-transform: uppercase;
    font-weight: bold;
    border: none;
    background: #a177ff;
    padding: 6px 15px;
    margin-top: 5px;

    i {
      font-size: 14px;
      font-weight: bold;
      margin-left: 5px;
    }
  }

  .btn:hover {
    background: #8c5bff;
  }
  transition: 500ms ease-in-out;

  .card:hover {
    transform: scale(1.05);
    transition: 500ms ease-in-out;
  }
  @media (max-width: 768px) {
    .card {
      height: 295px;
      width: 165px;
      img {
        width: auto;
        height: 140px;
      }
    }

    /* .card {
       margin: 30px 0 30px 0;
      font-size: 0.72em;
       height: auto;
      width: 180px;
    } */
  }
  @media (max-width: 320px) {
    .card {
      height: 315px;
      width: 165px;
      img {
        width: auto;
        height: 140px;
      }
    }
  }
}
#HnCScroller::-webkit-scrollbar {
  height: 0px;
  width: 0px;
  visibility: hidden;
}

